--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 
           <label for="title">Job Role</label>
           <select id="title" name="user-title">
-
             <option value="full-stack js developer"
               >Full Stack JavaScript Developer</option
             >
@@ -36,7 +35,12 @@
             <option value="student">Student</option>
             <option value="other">Other</option>
           </select>
-          <input type="text" id="other-title" name="job-role-other" placeholder="Your Job Role">
+          <input
+            type="text"
+            id="other-title"
+            name="job-role-other"
+            placeholder="Your Job Role"
+          />
         </fieldset>
 
         <fieldset class="shirt">
